--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,137 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>Bienvenidx</header>
-    <main></main>
-    <footer></footer>
-    <script src="index.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Tarjeta de crédito válida</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- cabecera -->
+  <header>
+    <h1>Casinostop</h1>
+  </header>
+  <!-- lista de navegación -->
+  <nav>
+    <ul>
+      <li>Bienvenido</li>
+      <li>Reglamento interno</li>
+      <li>Valide su tarjeta</li>
+      <li>Contacto</li>
+    </ul>
+  </nav>
+
+  <!-- aquí va el validador -->
+  <div class="contenedor">
+
+      <!-- tarjeta -->
+    <section class="tarjeta" id="tarjeta">
+      <div class="delantera">
+
+        <div class="logo-marca">
+          <img src="img/logos/visa.png" alt="">
+        </div>
+
+        <img src="img/chip-tarjeta.png" class="chip " alt="">
+
+        <div class="datos">
+
+          <div class="grupo" id="numero">
+            <p class="label">Número tarjeta</p>
+            <p class="numero">#### #### #### ####</p>
+          </div>
+
+          <div class="flexbox">
+            <div class="grupo" id="nombre">
+              <p class="label">Nombre Tarjeta</p>
+              <p class="nombre">Jhon Doe</p>
+            </div>
+
+            <div class="grupo" id="expiracion">
+              <p class="label">Expiracion</p>
+              <p class="expiracion"><span class="mes">MM</span> / <span class="year">AA</span></p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="trasera">
+        <div class="barra-magnetica"></div>
+        <div class="datos">
+          <div class="grupo" id="firma">
+            <p class="label">Firma</p>
+            <div class="firma"> <p>Carlos Arturo</p> </div>
+          </div>
+
+          <div class="grupo" id="ccv">
+            <p class="label">CCV</p>
+            <p class="ccv"></p>
+          </div>
+
+        </div>
+
+        <p class="leyenda"> Aquí va el texto debajo de la firma que nadie sabe qué dice porque no se lee nunca.</p>
+        <a href="#" class="link-banco">www.tubanco.com</a>
+      </div>
+
+    </section>
+
+      <!-- contenedor boton abrir formulario -->
+    <div class="contenedor-btn">
+      <button class="btn-abrir-formulario" id="btn-abrir-formulario">
+        <i class="fas fa-plus"></i>
+      </button>
+    </div>
+
+      <!-- formulario-->
+    <form class="formulario-tarjeta" action="" id="formulario-tarjeta">
+      <div class="grupo">
+        <label for="inputNumero">Número tarjeta</label>
+        <input type="text" id="inputNumero" maxlength="19" autocomplete="off">
+      </div>
+
+      <div class="grupo">
+        <label for="inputNombre">Nombre persona</label>
+        <input type="text" id="inputNombre" maxlength="19" autocomplete="off">
+      </div>
+
+      <div class="flexbox">
+        <div class="grupo expira">
+          <label for="selectMes">Expiración</label>
+            <div class="flexbox">
+              <div class="grupo-select">
+                <select name="mes" id="selectMes">
+                  <option disabled selected>Mes</option>
+                  <i class="fas fa-angle-down"></i>
+                </select>
+              </div>
+              <div class="grupo-select">
+                <select name="year" id="selectYear">
+                  <option disabled selected>Año</option>
+                  <i class="fas fa-angle-down"></i>
+                </select>
+              </div>
+            </div>
+        </div>
+
+        <div class="grupo ccv">
+          <label for="inputCCV">CCV</label>
+          <input type="text" id="inputCCV" maxlength="3">
+        </div>
+      </div>
+
+      <button type="submit" class="btn-enviar">Enviar</button>
+
+    </form>
+  </div>
+
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+  <script src="index.js" type="module"></script>
+  <main></main>
+  <footer></footer>
+
+</body>
+
 </html>
