fondo ok, me funciona hasta el giro de la tarjeta

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
     <section class="tarjeta" id="tarjeta">
       <div class="delantera">
 
-        <div class="logo-marca">
-          <img src="img/logos/visa.png" alt="">
+        <div class="logo-marca" id="logo-marca">
+        <!-- aqui va el logo de tarjeta  <img src="img/logos/visa.png" alt=""> -->
         </div>
 
         <img src="img/chip-tarjeta.png" class="chip " alt="">
@@ -45,7 +45,7 @@
           <div class="flexbox">
             <div class="grupo" id="nombre">
               <p class="label">Nombre Tarjeta</p>
-              <p class="nombre">Jhon Doe</p>
+              <p class="nombre">CARLOS MARTINEZ</p>
             </div>
 
             <div class="grupo" id="expiracion">
@@ -62,7 +62,7 @@
         <div class="datos">
           <div class="grupo" id="firma">
             <p class="label">Firma</p>
-            <div class="firma"> <p>Carlos Arturo</p> </div>
+            <div class="firma"> <p></p> </div>
           </div>
 
           <div class="grupo" id="ccv">
@@ -110,7 +110,7 @@
               <div class="grupo-select">
                 <select name="year" id="selectYear">
                   <option disabled selected>Año</option>
-                  <i class="fas fa-angle-down"></i>
+                  <!-- no me funciona el boton :( <i class="fas fa-angle-down"></i> -->
                 </select>
               </div>
             </div>
