fondo nuevo de tarjeta

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn-enviar">Enviar</button>
+      <button type="submit" class="btn-enviar">Validar</button>
 
     </form>
   </div>
