listo para los test

--- a/src/index.html
+++ b/src/index.html
@@ -78,12 +78,12 @@
 
     </section>
 
-      <!-- contenedor boton abrir formulario -->
-    <div class="contenedor-btn">
+      <!-- contenedor boton abrir formulario, no se usa-->
+    <!-- <div class="contenedor-btn">
       <button class="btn-abrir-formulario" id="btn-abrir-formulario">
         <i class="fas fa-plus"></i>
       </button>
-    </div>
+    </div> -->
 
       <!-- formulario-->
     <form class="formulario-tarjeta" action="" id="formulario-tarjeta">
